[package]
name = "programmable-matter-leptos"
version = "0.0.1"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.7.0", features = ["csr"] }
log = "0.4.22"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
